--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   google_fonts: ^2.1.0
   flutter_secure_storage: ^4.2.1
   flutter_keyboard_visibility: ^5.0.3
+  provider: ^5.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
