--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -38,9 +38,11 @@ dependencies:
     path: ../
   bot_toast:
   provider: ^5.0.0
+  flutter_keyboard_visibility: ^5.0.3
   flutter_localizations:
     sdk: flutter
   intl: ^0.17.0
+
 
 dev_dependencies:
   flutter_test:
