--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,21 +15,20 @@ dependencies:
   http: ^0.13.4
   textless: ^6.6.6
   get: ^4.3.8
-  get_storage: ^2.0.3
   dio: ^4.0.1
   firebase_core: ^1.8.0
   firebase_messaging: ^10.0.9
-  image_picker: ^0.8.4+3
+  image_picker: ^0.8.4+4
   sqflite: ^2.0.0+4
-  path_provider: ^2.0.5
+  path_provider: ^2.0.6
   socket_io_client: ^1.0.1
   intl: ^0.17.0
-  file_picker: ^4.1.6
+  file_picker: ^4.2.0
   flutter_native_image: ^0.0.6+1
   permission_handler: ^8.2.5
   flutter_video_info: ^1.2.0
   video_thumbnail: ^0.4.3
-  video_player: ^2.2.5
+  video_player: ^2.2.6
   record: ^3.0.0
   stop_watch_timer: ^1.3.1
   audioplayers: ^0.20.1
@@ -38,10 +37,11 @@ dependencies:
   chewie: ^1.2.2
   cached_network_image: ^3.1.0
   timeago: ^3.1.0
-  flutter_local_notifications: ^9.0.1
+  flutter_local_notifications: ^9.0.2
   bot_toast: ^4.0.1
   google_fonts: ^2.1.0
   path: ^1.8.0
+  flutter_secure_storage: ^4.2.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
