--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_fonts: ^2.1.0
   path: ^1.8.0
   flutter_secure_storage: ^4.2.1
+  get_storage: ^2.0.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
