--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: v_chat_sdk
 description: official sdk for vchat to impement chat system into new or exist flutter app
-version: 0.2.2
+version: 0.2.4
 homepage: https://github.com/hatemragab/v_chat_sdk
 
 environment:
@@ -14,16 +14,16 @@ dependencies:
   textless: ^6.6.6
   get: ^4.3.8
   dio: ^4.0.1
-  firebase_core: ^1.8.0
-  firebase_messaging: ^10.0.9
+  firebase_core: ^1.10.0
+  firebase_messaging: ^11.1.0
   image_picker: ^0.8.4+4
   sqflite: ^2.0.0+4
   path_provider: ^2.0.6
   socket_io_client: ^1.0.1
   intl: ^0.17.0
-  file_picker: ^4.2.0
+  file_picker: ^4.2.1
   flutter_native_image: ^0.0.6+1
-  permission_handler: ^8.2.5
+  permission_handler: ^8.2.6
   flutter_video_info: ^1.2.0
   video_thumbnail: ^0.4.3
   video_player: ^2.2.6
@@ -33,9 +33,9 @@ dependencies:
   open_file: ^3.2.1
   photo_view: ^0.13.0
   chewie: ^1.2.2
-  cached_network_image: ^3.1.0
+  cached_network_image: ^3.1.0+1
   timeago: ^3.1.0
-  flutter_local_notifications: ^9.0.2
+  flutter_local_notifications: ^9.0.3
   bot_toast: ^4.0.1
   google_fonts: ^2.1.0
   path: ^1.8.0
