--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -33,11 +33,11 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.3
+  cupertino_icons: ^1.0.4
   v_chat_sdk:
     path: ../
   bot_toast:
-  provider: ^5.0.0
+  provider: ^6.0.1
   cached_network_image:
   get_storage:
   flutter_launcher_icons: ^0.9.2
@@ -106,6 +106,6 @@ flutter_icons:
   image_path: "assets/icon.png"
 
 flutter_intl:
-  enabled: true
+  enabled: false
   assets:
     - assets/
