--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ dependencies:
   image_picker: ^0.8.4+4
   sqflite: ^2.0.0+4
   path_provider: ^2.0.7
-  socket_io_client: ^1.0.1
+  socket_io_client: ^1.0.2
   intl: ^0.17.0
   file_picker: ^4.2.3
   flutter_native_image: ^0.0.6+1
@@ -32,15 +32,16 @@ dependencies:
   audioplayers: ^0.20.1
   open_file: ^3.2.1
   photo_view: ^0.13.0
-  chewie: ^1.2.2
+  video_viewer: ^1.2.7
   cached_network_image: ^3.1.0+1
   timeago: ^3.1.0
-  flutter_local_notifications: ^9.1.2
+  flutter_local_notifications: ^9.1.3
   bot_toast: ^4.0.1
   google_fonts: ^2.1.0
   path: ^1.8.0
   flutter_secure_storage: ^5.0.2
   get_storage: ^2.0.3
+  chat_composer: ^0.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
