--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,7 @@ dependencies:
   http: ^0.13.4
   flutter_bloc: ^8.0.0
   textless: ^6.6.6
-  get: ^4.3.8
-  dio: ^4.0.3
+  dio: ^4.0.4
   firebase_core: ^1.10.0
   firebase_messaging: ^11.1.0
   image_picker: ^0.8.4+4
@@ -22,13 +21,13 @@ dependencies:
   path_provider: ^2.0.7
   socket_io_client: ^1.0.2
   intl: ^0.17.0
-  file_picker: ^4.2.3
+  file_picker: ^4.2.4
   flutter_native_image: ^0.0.6+1
   permission_handler: ^8.3.0
   flutter_video_info: ^1.2.0
   video_thumbnail: ^0.4.3
   video_player: ^2.2.7
-  record: ^3.0.0
+  record: ^3.0.1
   stop_watch_timer: ^1.3.1
   audioplayers: ^0.20.1
   open_file: ^3.2.1
@@ -36,17 +35,19 @@ dependencies:
   video_viewer: ^1.2.7
   cached_network_image: ^3.1.0+1
   timeago: ^3.1.0
-  flutter_local_notifications: ^9.1.3
+  flutter_local_notifications: ^9.1.4
   bot_toast: ^4.0.1
   google_fonts: ^2.1.0
   path: ^1.8.0
   flutter_secure_storage: ^5.0.2
   get_storage: ^2.0.3
-  chat_composer: ^0.0.1
+  loadmore: ^2.0.1
+  vibration: ^1.7.4-nullsafety.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints:
+  effective_dart: ^1.3.2
 
 
 # For information on the generic Dart part of this file, see the
