--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,13 +40,13 @@ dependencies:
   path: ^1.8.0
   flutter_secure_storage: ^5.0.2
   get_storage: ^2.0.3
+  fluttertoast: ^8.0.8
   loadmore: ^2.0.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints:
-  effective_dart: ^1.3.2
 
 
 # For information on the generic Dart part of this file, see the
