--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   get_storage: ^2.0.3
   fluttertoast: ^8.0.8
   loadmore: ^2.0.1
+  get_it: ^7.2.0
 
 dev_dependencies:
   flutter_test:
