--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: v_chat_sdk
 description: official sdk for vchat to impement chat system into new or exist flutter app
-version: 0.4.0
+version: 0.5.0
 homepage: https://github.com/hatemragab/v_chat_sdk
 
 environment:
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   http: ^0.13.4
   flutter_bloc: ^8.0.0
+  bloc: ^8.0.1
   textless: ^6.6.6
   dio: ^4.0.4
   firebase_core: ^1.10.0
@@ -21,7 +22,7 @@ dependencies:
   path_provider: ^2.0.7
   socket_io_client: ^1.0.2
   intl: ^0.17.0
-  file_picker: ^4.2.5
+  file_picker: ^4.2.7
   flutter_native_image: ^0.0.6+1
   permission_handler: ^8.3.0
   flutter_video_info: ^1.2.0
@@ -33,7 +34,7 @@ dependencies:
   open_file: ^3.2.1
   photo_view: ^0.13.0
   video_viewer: ^1.2.7
-  cached_network_image: ^3.1.0+1
+  cached_network_image: ^3.2.0
   timeago: ^3.1.0
   flutter_local_notifications: ^9.1.4
   google_fonts: ^2.1.0
@@ -41,12 +42,15 @@ dependencies:
   flutter_secure_storage: ^5.0.2
   fluttertoast: ^8.0.8
   get_it: ^7.2.0
-
+  meta: ^1.7.0
+  crypto: ^3.0.1
+  pretty_dio_logger: ^1.2.0-beta-1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints:
+
 
 
 # For information on the generic Dart part of this file, see the
