--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,10 +15,10 @@ dependencies:
   bloc: ^8.0.1
   textless: ^6.6.6
   dio: ^4.0.4
-  firebase_core: ^1.10.0
-  firebase_messaging: ^11.1.0
+  firebase_core: ^1.10.2
+  firebase_messaging: ^11.2.0
   image_picker: ^0.8.4+4
-  sqflite: ^2.0.0+4
+  sqflite: ^2.0.1
   path_provider: ^2.0.7
   socket_io_client: ^1.0.2
   intl: ^0.17.0
