--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -102,6 +102,7 @@ flutter:
 flutter_icons:
   android: "ic_launcher"
   ios: true
+  remove_alpha_ios: true
   image_path: "assets/icon.png"
 
 flutter_intl:
