* unread message count for group chat and single chat * leave group chat * group chat page which can update group name and upgrade users to admin if i the group creator and update group image * kick users from group * admin downgrade and upgrade system if iam admin * admins can add users only

--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
 
     <application
         android:icon="@mipmap/ic_launcher"
-        android:label="v_chat_sdk_example"
+        android:label="v chat"
         android:requestLegacyExternalStorage="true"
         android:usesCleartextTraffic="true">
         <activity
