--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -1,1 +1,34 @@
 
+#The name of your workflow.
+name: coverage
+# Trigger the workflow on push or pull request
+on:
+  push:
+    branches:
+      - master
+      - dev
+  pull_request:
+    branches: [master, dev]
+#A workflow run is made up of one or more jobs. Jobs run in parallel by default.
+jobs:
+  test:
+    #The type of machine to run the job on. [windows,macos, ubuntu , self-hosted]
+    defaults:
+      run:
+        working-directory: ./
+    runs-on: ubuntu-latest
+    #sequence of tasks called
+    steps:
+      # The branch or tag ref that triggered the workflow will be checked out.
+      # https://github.com/actions/checkout
+      - uses: actions/checkout@v1
+      # Setup a flutter environment.
+      # https://github.com/marketplace/actions/flutter-action
+      - uses: subosito/flutter-action@v1
+        with:
+          channel: "stable"
+      - run: flutter pub get
+      #- run: flutter analyze
+      # run  flutter widgets tests  and unit tests
+      - run: flutter test --coverage
+      - uses: codecov/codecov-action@v1.0.7
