--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: v_chat_sdk
 description: official sdk for vchat to impement chat system into new or exist flutter app
-version: 0.9.0
+version: 0.9.1
 homepage: https://github.com/hatemragab/v_chat_sdk
 
 environment:
@@ -10,47 +10,80 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.13.4
-  flutter_bloc: ^8.0.0
+  # state management
   bloc: ^8.0.1
+  # state management
+  flutter_bloc: ^8.0.0
+
+  # upload files
+  http: ^0.13.4
+
+  # speed up the text theme access
   textless: ^6.6.6
+  # http request
   dio: ^4.0.4
+  #init firebase
   firebase_core: ^1.10.5
+  # for integrate notification with firebase
   firebase_messaging: ^11.2.3
   image_picker: ^0.8.4+4
+  # store chat offline
   sqflite: ^2.0.1
+  # sql data base path
   path_provider: ^2.0.8
+  # real time chat
   socket_io_client: ^1.0.2
+  # date format
   intl: ^0.17.0
+  # get files
   file_picker: ^4.2.7
+  # crop image and reduce its quality
   flutter_native_image: ^0.0.6+1
+  # ask for files permissions
   permission_handler: ^8.3.0
+  # get video info
   flutter_video_info: ^1.2.0
+  # video_thumbnail
   video_thumbnail: ^0.4.3
+  # flutter official video_player
   video_player: ^2.2.7
+  # record voice chat
   record: ^3.0.2
+  # voice recording timer
   stop_watch_timer: ^1.3.1
+  # play voice note
   audioplayers: ^0.20.1
+  # open chat file directed to its app
   open_file: ^3.2.1
+  #show chat photo
   photo_view: ^0.13.0
+  # show chat video
   video_viewer: ^1.2.7
+  # cached_network_image
   cached_network_image: ^3.2.0
+  # message time
   timeago: ^3.1.0
+  #in app notifications
   flutter_local_notifications: ^9.1.5
-  google_fonts: ^2.1.0
   path: ^1.8.0
+  # save user access token
   flutter_secure_storage: ^5.0.2
+  # success alert
   fluttertoast: ^8.0.8
+  # for inject dependency
   get_it: ^7.2.0
   meta: ^1.7.0
+  # for has the password
   crypto: ^3.0.1
+  # for save user app language
+  shared_preferences: ^2.0.11
+
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints:
-
-
+  lint:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
