--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,9 +27,9 @@ dependencies:
   # for integrate notification with firebase
   firebase_messaging: ^11.2.4
   image_picker: ^0.8.4+4
-  # store chat offline
+  # store chat offline /no web support
   sqflite: ^2.0.1
-  # sql data base path
+  # sql data base path /no web support
   path_provider: ^2.0.8
   # real time chat
   socket_io_client: ^1.0.2
@@ -37,13 +37,13 @@ dependencies:
   intl: ^0.17.0
   # get files
   file_picker: ^4.3.0
-  # crop image and reduce its quality
+  # crop image and reduce its quality /no web support
   flutter_native_image: ^0.0.6+1
-  # ask for files permissions
+  # ask for files permissions /no web support
   permission_handler: ^8.3.0
-  # get video info
+  # get video info /no web support
   flutter_video_info: ^1.2.0
-  # video_thumbnail
+  # video_thumbnail /no web support
   video_thumbnail: ^0.4.3
   # flutter official video_player
   video_player: ^2.2.10
@@ -53,17 +53,17 @@ dependencies:
   stop_watch_timer: ^1.3.1
   # play voice note
   audioplayers: ^0.20.1
-  # open chat file directed to its app
+  # open chat file directed to its app /no web support
   open_file: ^3.2.1
   #show chat photo
   photo_view: ^0.13.0
-  # show chat video
+  # show chat video /no web support
   video_viewer: ^1.2.7
-  # cached_network_image
+  # cached_network_image /no web support
   cached_network_image: ^3.2.0
   # message time
   timeago: ^3.1.0
-  #in app notifications
+  #in app notifications /no web support
   flutter_local_notifications: ^9.2.0
   path: ^1.8.0
   # save user access token
