--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   # state management
-  bloc: ^8.0.2
+  bloc: ^8.0.3
   # state management
   flutter_bloc: ^8.0.1
 
@@ -21,69 +21,67 @@ dependencies:
   # speed up the text theme access
   textless: ^6.6.6
   # http request
-  dio: ^4.0.4
+  dio: ^4.0.6
   #init firebase
-  firebase_core: ^1.12.0
+  firebase_core: ^1.18.0
   # for integrate notification with firebase
-  firebase_messaging: ^11.2.6
-  image_picker: ^0.8.4+6
+  firebase_messaging: ^11.4.2
+  image_picker: ^0.8.5+3
   # store chat offline /no web support
-  sqflite: ^2.0.2
+  sqflite: ^2.0.2+1
   # sql data base path /no web support
-  path_provider: ^2.0.8
+  path_provider: ^2.0.11
   # real time chat
   socket_io_client: ^1.0.2
   # date format
   intl: ^0.17.0
   # get files
-  file_picker: ^4.3.3
+  file_picker: ^4.6.1
   # crop image and reduce its quality /no web support
   flutter_native_image: ^0.0.6+1
   # ask for files permissions /no web support
-  permission_handler: ^8.3.0
+  permission_handler: ^9.2.0
   # get video info /no web support
   flutter_video_info: ^1.2.0
   # video_thumbnail /no web support
-  video_thumbnail: ^0.4.3
+  video_thumbnail: ^0.5.0
   # flutter official video_player
-  video_player: ^2.2.18
+  video_player: ^2.4.5
   # record voice chat
-  record: ^3.0.2
+  record: ^4.1.1
   # voice recording timer
-  stop_watch_timer: ^1.3.1
+  stop_watch_timer: ^1.5.0
   # play voice note
-  audioplayers: ^0.20.1
+  audioplayers: ^1.0.1
   # open chat file directed to its app /no web support
   open_file: ^3.2.1
   #show chat photo
-  photo_view: ^0.13.0
+  photo_view: ^0.14.0
   # show chat video /no web support
   video_viewer: ^1.2.7
   # cached_network_image /no web support
-  cached_network_image: ^3.2.0
+  cached_network_image: ^3.2.1
   # message time
-  timeago: ^3.2.1
+  timeago: ^3.2.2
   #in app notifications /no web support
-  flutter_local_notifications: ^9.2.0
+  flutter_local_notifications: ^9.6.1
   path: ^1.8.0
   # save user access token
   flutter_secure_storage: ^5.0.2
   # success alert
-  fluttertoast: ^8.0.8
+  fluttertoast: ^8.0.9
   # for inject dependency
   get_it: ^7.2.0
   meta: ^1.7.0
   # for has the password
-  crypto: ^3.0.1
+  crypto: ^3.0.2
   # for save user app language
-  shared_preferences: ^2.0.13
+  shared_preferences: ^2.0.15
 
 
 
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
   lint:
 
 # For information on the generic Dart part of this file, see the
