--- a/examples/media_editor_example/pubspec.yaml
+++ b/examples/media_editor_example/pubspec.yaml
@@ -10,6 +10,10 @@ dependencies:
   get: 4.6.5
   flutter: 
     sdk: flutter
+  v_chat_media_editor:
+    path: ../../ui_packages/v_chat_media_editor
+  v_chat_sdk_core:
+    path: ../../packages/v_chat_sdk_core
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
