--- a/ui_packages/v_chat_media_editor/pubspec.yaml
+++ b/ui_packages/v_chat_media_editor/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  v_chat_sdk_core:
+    path: ../../packages/v_chat_sdk_core
 
 dev_dependencies:
   flutter_test:
