--- a/examples/core_example/pubspec.yaml
+++ b/examples/core_example/pubspec.yaml
@@ -9,6 +9,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   v_chat_sdk_core:
     path: ../../packages/v_chat_sdk_core
+  v_chat_firebase_fcm:
+    path: ../../packages/v_chat_firebase_fcm
   get: 4.6.5
   flutter: 
     sdk: flutter
