--- a/packages/v_chat_sdk_core/pubspec.yaml
+++ b/packages/v_chat_sdk_core/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.13.5
   flutter_localizations:
     sdk: flutter
 dev_dependencies:
