--- a/packages/v_chat_sdk_core/pubspec.yaml
+++ b/packages/v_chat_sdk_core/pubspec.yaml
@@ -11,12 +11,26 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.13.5
+  logging: ^1.1.0
+  chopper: ^5.1.0
+  http_parser: ^4.0.2
+  encrypt: ^5.0.1
+  mime: ^1.0.2
+  shared_preferences: ^2.0.15
+  mime_type: ^1.0.0
+  uuid: ^3.0.7
+  file_sizes: ^1.0.6
+  platform_device_id: ^1.0.1
+  device_info_plus: ^8.0.0
+  path: ^1.8.2
   flutter_localizations:
     sdk: flutter
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  build_runner: ^2.3.2
+  chopper_generator: ^5.1.0+1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
