--- a/examples/core_example/android/app/src/main/AndroidManifest.xml
+++ b/examples/core_example/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.core_example">
+    <uses-permission android:name="android.permission.INTERNET"/>
    <application
         android:label="core_example"
         android:name="${applicationName}"
