--- a/packages/v_chat_sdk_core/pubspec.yaml
+++ b/packages/v_chat_sdk_core/pubspec.yaml
@@ -22,6 +22,9 @@ dependencies:
   file_sizes: ^1.0.6
   platform_device_id: ^1.0.1
   device_info_plus: ^8.0.0
+  get_it: ^7.2.0
+  socket_io_client: ^2.0.0
+  event_bus_plus: ^0.5.0
   path: ^1.8.2
   flutter_localizations:
     sdk: flutter
