--- a/packages/v_chat_sdk_core/pubspec.yaml
+++ b/packages/v_chat_sdk_core/pubspec.yaml
@@ -25,9 +25,20 @@ dependencies:
   get_it: ^7.2.0
   socket_io_client: ^2.0.0
   event_bus_plus: ^0.5.0
+  latlong2: ^0.8.1
   path: ^1.8.2
+  sqflite: ^2.2.0+2
+  stack_trace: ^1.10.0
+  html: ^0.15.1
+  intl: ^0.17.0
+  cross_file: ^0.3.3+2
+  objectid: ^2.1.0
+  sqlite3_flutter_libs: ^0.5.10
+  diacritic: ^0.1.3
   flutter_localizations:
     sdk: flutter
+  v_chat_voice_player:
+    path: ../../ui_packages/v_chat_voice_player
 dev_dependencies:
   flutter_test:
     sdk: flutter
