--- a/ui_packages/v_chat_voice_player/pubspec.yaml
+++ b/ui_packages/v_chat_voice_player/pubspec.yaml
@@ -4,12 +4,15 @@ version: 0.0.1
 homepage:
 
 environment:
-  sdk: '>=2.18.4 <3.0.0'
+  sdk: ">=2.12.0 <3.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  flutter_cache_manager: ^3.3.0
+  just_audio: ^0.9.21
+  phosphor_flutter: ^1.4.0
 
 dev_dependencies:
   flutter_test:
