--- a/examples/v_chat_sdk_sample/android/app/src/main/AndroidManifest.xml
+++ b/examples/v_chat_sdk_sample/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.vchatsdk.app.v2">
-   <application
+    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <application
         android:label="v_chat_sdk_sample"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
