--- a/ui_packages/v_chat_ui/pubspec.yaml
+++ b/ui_packages/v_chat_ui/pubspec.yaml
@@ -16,6 +16,23 @@ dependencies:
   flutter_cache_manager: ^3.3.0
   just_audio: ^0.9.21
   phosphor_flutter: ^1.4.0
+  flutter_painter:
+    git:
+      url: https://github.com/omarhurani/flutter_painter
+      ref: 2.0.0
+  video_player: ^2.4.7
+  image_cropping: ^0.0.13
+  image: ^3.2.2
+  image_cropper: ^3.0.0
+  #  video_editor: ^1.4.3
+  mime_type: ^1.0.0
+  mime: ^1.0.2
+  path: ^1.8.1
+  video_thumbnail: ^0.5.2
+  chewie: ^1.3.4
+  flutter_native_image: ^0.0.6+1
+  path_provider: ^2.0.11
+  helpers: ^1.1.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
