--- a/ui_packages/v_chat_ui_example/pubspec.yaml
+++ b/ui_packages/v_chat_ui_example/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   cloud_firestore: ^4.0.4
   firebase_storage: ^11.0.4
   shared_preferences: ^2.0.15
+  flutter_portal: ^1.1.2
   flutter_facebook_auth: ^5.0.6
   http: ^0.13.5
   image_picker: ^0.8.6
