--- a/ui_packages/v_chat_ui/pubspec.yaml
+++ b/ui_packages/v_chat_ui/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   textless: ^6.6.6
   file_picker: ^5.2.3
   wechat_camera_picker: ^3.6.5
+  adaptive_dialog: ^1.8.0+1
   flutter_painter:
     git:
       url: https://github.com/omarhurani/flutter_painter
@@ -30,7 +31,10 @@ dependencies:
   #  video_editor: ^1.4.3
   mime_type: ^1.0.0
   mime: ^1.0.2
+  flutter_portal: ^1.1.2
   path: ^1.8.1
+  progress_dialog:
+    git: https://github.com/mostafaAbdelazim/progress_dialog.git
   video_thumbnail: ^0.5.2
   chewie: ^1.3.4
   flutter_native_image: ^0.0.6+1
@@ -63,6 +67,7 @@ dependencies:
   flutter_mentions:
     git:
       url: https://github.com/hatemragab/flutter_mentions
+      ref: a088c3aea8dacf2e7f3f31e12a1db5a5f22eb89b
 
 dev_dependencies:
   flutter_test:
