media editor and voice player updates

--- a/ui_packages/v_chat_media_editor/pubspec.yaml
+++ b/ui_packages/v_chat_media_editor/pubspec.yaml
@@ -1,16 +1,40 @@
 name: v_chat_media_editor
 description: A new Flutter package project.
 version: 0.0.1
-homepage:
+homepage: https://hatemragab.github.io/VChatSdk-Documentation/
+issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
+repository: https://github.com/hatemragab/v_chat_sdk
 
 environment:
-  sdk: '>=2.18.5 <3.0.0'
+  sdk: '>=2.17.0 <3.0.0'
   flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
-
+  v_chat_utils: ^0.0.1
+  permission_handler: ^10.2.0
+  flutter_painter:
+    git:
+      url: https://github.com/omarhurani/flutter_painter
+      ref: 2.0.0
+  video_player: ^2.4.7
+  image_cropping: ^0.0.13
+  image: ^3.2.2
+  image_cropper: ^3.0.0
+  #  video_editor: ^1.4.3
+  mime_type: ^1.0.0
+  mime: ^1.0.2
+  path: ^1.8.1
+  video_thumbnail: ^0.5.2
+  chewie: ^1.3.4
+  flutter_native_image: ^0.0.6+1
+  path_provider: ^2.0.11
+  helpers: ^1.1.4
+  flutter_cache_manager: ^3.3.0
+  cross_file: ^0.3.3+2
+  phosphor_flutter: ^1.4.0
+  uuid: ^3.0.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
