--- a/ui_packages/v_chat_media_editor/media_example/pubspec.yaml
+++ b/ui_packages/v_chat_media_editor/media_example/pubspec.yaml
@@ -3,11 +3,15 @@ version: 1.0.0+1
 publish_to: none
 description: A new Flutter project.
 environment: 
-  sdk: '>=2.18.5 <3.0.0'
+  sdk: '>=2.17.0 <3.0.0'
 
 dependencies: 
   cupertino_icons: ^1.0.2
   get: 4.6.5
+  file_picker: ^5.2.4
+  v_chat_utils: ^0.0.1
+  v_chat_media_editor:
+    path: ../
   flutter: 
     sdk: flutter
 
