--- a/ui_packages/v_chat_ui/pubspec.yaml
+++ b/ui_packages/v_chat_ui/pubspec.yaml
@@ -12,8 +12,7 @@ dependencies:
     sdk: flutter
   v_chat_sdk_core:
     path: ../../packages/v_chat_sdk_core
-  v_chat_utils:
-    path: ../../packages/v_chat_utils
+  v_chat_utils: ^0.0.1
   provider: ^6.0.4
   flutter_cache_manager: ^3.3.0
   just_audio: ^0.9.21
@@ -34,8 +33,6 @@ dependencies:
   mime_type: ^1.0.0
   mime: ^1.0.2
   path: ^1.8.1
-  progress_dialog:
-    git: https://github.com/mostafaAbdelazim/progress_dialog.git
   video_thumbnail: ^0.5.2
   chewie: ^1.3.4
   flutter_native_image: ^0.0.6+1
