--- a/ui_packages/v_chat_ui_example/pubspec.yaml
+++ b/ui_packages/v_chat_ui_example/pubspec.yaml
@@ -3,7 +3,7 @@ version: 1.0.0+1
 publish_to: none
 description: A new Flutter project.
 environment: 
-  sdk: '>=2.18.5 <3.0.0'
+  sdk: '>=2.17.0 <3.0.0'
 
 dependencies:
   cupertino_icons: ^1.0.2
@@ -47,8 +47,7 @@ dependencies:
   http_parser: ^4.0.2
   v_chat_sdk_core:
     path: ../../packages/v_chat_sdk_core
-  v_chat_utils:
-    path: ../../packages/v_chat_utils
+  v_chat_utils: ^0.0.1
   v_chat_ui:
     path: ../v_chat_ui
   flutter: 
