--- a/ui_packages/v_chat_voice_player/pubspec.yaml
+++ b/ui_packages/v_chat_voice_player/pubspec.yaml
@@ -1,15 +1,20 @@
 name: v_chat_voice_player
-description: A new Flutter package project.
+description: v chat voice player
 version: 0.0.1
-homepage:
+homepage: https://hatemragab.github.io/VChatSdk-Documentation/
+issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
+repository: https://github.com/hatemragab/v_chat_sdk
 
 environment:
-  sdk: '>=2.18.5 <3.0.0'
+  sdk: '>=2.17.0 <3.0.0'
   flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  v_chat_utils: ^0.0.1
+  flutter_cache_manager: ^3.3.0
+  just_audio: ^0.9.21
 
 dev_dependencies:
   flutter_test:
