--- a/ui_packages/v_chat_voice_player/voice_example/pubspec.yaml
+++ b/ui_packages/v_chat_voice_player/voice_example/pubspec.yaml
@@ -3,11 +3,16 @@ version: 1.0.0+1
 publish_to: none
 description: A new Flutter project.
 environment: 
-  sdk: '>=2.18.5 <3.0.0'
+  sdk: '>=2.17.0 <3.0.0'
 
 dependencies: 
   cupertino_icons: ^1.0.2
   get: 4.6.5
+  v_chat_utils: ^0.0.1
+  flutter_cache_manager: ^3.3.0
+  sizer: ^2.0.15
+  v_chat_voice_player:
+    path: ../
   flutter: 
     sdk: flutter
 
