--- a/packages/v_chat_sdk_core/pubspec_overrides.yaml
+++ b/packages/v_chat_sdk_core/pubspec_overrides.yaml
@@ -1,4 +1,2 @@
 # melos_managed_dependency_overrides: v_chat_ui,v_chat_utils
-dependency_overrides:
-  v_chat_utils:
-    path: ../v_chat_utils
+{dependency_overrides: {v_chat_utils: {path: ../v_chat_utils}}}
