--- a/ui_packages/v_chat_input_ui/pubspec.yaml
+++ b/ui_packages/v_chat_input_ui/pubspec.yaml
@@ -1,6 +1,6 @@
 name: v_chat_input_ui
 description: v chat text input ui
-version: 0.0.1
+version: 0.0.2
 homepage: https://hatemragab.github.io/VChatSdk-Documentation/
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
 repository: https://github.com/hatemragab/v_chat_sdk
@@ -28,8 +28,7 @@ dependencies:
   textless: ^6.6.6
   v_chat_utils: ^0.0.2
 #  audio_waveforms: ^0.1.5+1
-  audio_waveforms:
-    git: https://github.com/yohom/audio_waveforms
+  audio_waveforms_fix: ^0.0.1
   emoji_picker_flutter: ^1.5.1
 dev_dependencies:
   flutter_test:
