--- a/ui_packages/v_chat_media_editor/pubspec.yaml
+++ b/ui_packages/v_chat_media_editor/pubspec.yaml
@@ -1,5 +1,5 @@
 name: v_chat_media_editor
-description: A new Flutter package project.
+description: v chat media editor package
 version: 0.0.1
 homepage: https://hatemragab.github.io/VChatSdk-Documentation/
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
@@ -14,10 +14,7 @@ dependencies:
     sdk: flutter
   v_chat_utils: ^0.0.2
   permission_handler: ^10.2.0
-  flutter_painter:
-    git:
-      url: https://github.com/omarhurani/flutter_painter
-      ref: 2.0.0
+  flutter_painter_v2: ^2.0.0
   video_player: ^2.4.7
   image_cropping: ^0.0.13
   image: ^3.2.2
