--- a/ui_packages/v_chat_input_ui/input_example/pubspec.yaml
+++ b/ui_packages/v_chat_input_ui/input_example/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: 4.6.5
   v_chat_utils: ^0.0.2
+  v_chat_sdk_core: ^0.0.2
   v_chat_input_ui:
     path: ../
 #  v_chat_sdk_core:
