--- a/ui_packages/v_chat_input_ui/input_example/pubspec_overrides.yaml
+++ b/ui_packages/v_chat_input_ui/input_example/pubspec_overrides.yaml
@@ -4,3 +4,5 @@ dependency_overrides:
     path: ..
   v_chat_utils:
     path: ../../../packages/v_chat_utils
+  v_chat_sdk_core:
+    path: ../../../packages/v_chat_sdk_core
