--- a/packages/v_chat_utils/pubspec.yaml
+++ b/packages/v_chat_utils/pubspec.yaml
@@ -31,7 +31,9 @@ dependencies:
   path: ^1.8.2
   cross_file: ^0.3.3+2
   mime: ^1.0.2
+  http: ^0.13.5
   collection: ^1.16.0
+  http_parser: ^4.0.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
