--- a/ui_packages/v_chat_input_ui/pubspec.yaml
+++ b/ui_packages/v_chat_input_ui/pubspec.yaml
@@ -1,6 +1,6 @@
 name: v_chat_input_ui
 description: v chat text input ui
-version: 0.0.2
+version: 0.0.3
 homepage: https://hatemragab.github.io/VChatSdk-Documentation/
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
 repository: https://github.com/hatemragab/v_chat_sdk
@@ -13,10 +13,10 @@ dependencies:
   flutter:
     sdk: flutter
   phosphor_flutter: ^1.4.0
-  file_picker: ^5.2.3
+  file_picker: ^5.2.4
   wechat_camera_picker: ^3.6.5
   permission_handler: ^10.2.0
-  record: ^3.0.2
+  record: ^4.4.3
   stop_watch_timer: ^2.0.0
   place_picker: ^0.10.0
   latlong2: ^0.8.1
@@ -26,9 +26,8 @@ dependencies:
   giphy_get: ^3.1.1
   v_chat_mention_controller: ^1.0.0
   textless: ^6.6.6
-  v_chat_utils: ^0.0.2
-#  audio_waveforms: ^0.1.5+1
-  audio_waveforms_fix: ^0.0.2
+  v_chat_utils: ^0.0.3
+  audio_waveforms: ^1.0.0
   emoji_picker_flutter: ^1.5.1
 dev_dependencies:
   flutter_test:
