message ui example

--- a/ui_packages/v_chat_room_page/room_example/pubspec.yaml
+++ b/ui_packages/v_chat_room_page/room_example/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   get: 4.6.5
   v_chat_utils: ^0.0.6
   v_chat_sdk_core: ^0.0.3
+  flutter_localizations:
+    sdk: flutter
   v_chat_room_page:
     path: ../
   flutter: 
