--- a/ui_packages/v_chat_message_page/pubspec.yaml
+++ b/ui_packages/v_chat_message_page/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   textless: ^6.6.6
   build_context: ^3.0.0
   timeago: ^3.3.0
+  auto_direction: ^0.0.6
   helpers: ^1.1.4
   provider: ^6.0.4
 
