--- a/ui_packages/v_chat_message_page/pubspec.yaml
+++ b/ui_packages/v_chat_message_page/pubspec.yaml
@@ -24,7 +24,8 @@ dependencies:
   timeago: ^3.3.0
   auto_direction: ^0.0.6
   helpers: ^1.1.4
-  provider: ^6.0.4
+  intl: ^0.18.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
