--- a/ui_packages/v_chat_room_page/pubspec.yaml
+++ b/ui_packages/v_chat_room_page/pubspec.yaml
@@ -1,5 +1,5 @@
 name: v_chat_room_page
-description: v chat roomsz page ui.
+description: v chat rooms page ui.
 version: 0.0.1
 homepage: https://hatemragab.github.io/VChatSdk-Documentation/
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
