--- a/packages/v_chat_utils/pubspec.yaml
+++ b/packages/v_chat_utils/pubspec.yaml
@@ -34,9 +34,13 @@ dependencies:
   mime: ^1.0.2
   http: ^0.13.5
   collection: ^1.16.0
+  platform_device_id: ^1.0.1
+  device_info_plus: ^8.0.0
   flutter_parsed_text: ^2.2.1
   http_parser: ^4.0.2
   overlay_support: ^2.1.0
+  event_bus_plus: ^0.5.0
+  uuid: ^3.0.7
 dev_dependencies:
   flutter_test:
     sdk: flutter
