--- a/core_packages/v_chat_sdk_core/analysis_options.yaml
+++ b/core_packages/v_chat_sdk_core/analysis_options.yaml
@@ -18,6 +18,7 @@ linter:
   # avoid_classes_with_only_static_members: false
     avoid_classes_with_only_static_members: false
     prefer_constructors_over_static_methods: false
+    use_build_context_synchronously: false
 
   # Make constructors the first thing in every class
   # sort_constructors_first: true
