--- a/core_packages/v_chat_sdk_core/pubspec.yaml
+++ b/core_packages/v_chat_sdk_core/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   v_chat_utils: ^0.2.0
+  flutter_fgbg: ^0.2.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
