--- a/core_packages/v_chat_sdk_sample/android/app/build.gradle
+++ b/core_packages/v_chat_sdk_sample/android/app/build.gradle
@@ -76,4 +76,5 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
     implementation 'androidx.browser:browser:1.4.0'
+    implementation 'com.onesignal:OneSignal:[4.0.0, 4.99.99]'
 }
