--- a/core_packages/v_chat_sdk_sample/android/app/src/main/AndroidManifest.xml
+++ b/core_packages/v_chat_sdk_sample/android/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-feature android:name="android.hardware.camera" />
-
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
     <application
         android:label="v_chat_sdk_sample"
         android:name="${applicationName}"
