--- a/core_packages/v_chat_utils/pubspec.yaml
+++ b/core_packages/v_chat_utils/pubspec.yaml
@@ -1,6 +1,6 @@
 name: v_chat_utils
 description: utils for v chat sdk
-version: 0.2.0
+version: 0.2.0+4
 homepage: https://hatemragab.github.io/VChatSdk-Documentation/
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
 repository: https://github.com/hatemragab/v_chat_sdk/tree/v2/core_packages/v_chat_utils
@@ -14,7 +14,7 @@ dependencies:
     sdk: flutter
   mime_type: ^1.0.0
   build_context: ^3.0.0
-  adaptive_dialog: ^1.8.0+1
+  adaptive_dialog: ^1.8.1+1
   flutter_cache_manager: ^3.3.0
   cached_network_image: ^3.2.3
   textless: ^6.6.6
@@ -51,6 +51,7 @@ dependencies:
   flutter_native_image: ^0.0.6+1
   video_thumbnail: ^0.5.3
   flutter_advanced_avatar: ^1.1.0
+  meta: ^1.8.0
 dev_dependencies:
   flutter_lints: ^2.0.1
   lints: ^2.0.1
