--- a/push_providers/v_chat_one_signal/pubspec.yaml
+++ b/push_providers/v_chat_one_signal/pubspec.yaml
@@ -12,8 +12,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  v_chat_utils: ^0.1.0+5
+  v_chat_utils: ^0.2.0
+  v_chat_sdk_core: ^0.2.0
   onesignal_flutter: ^3.5.0
+  eraser: ^2.0.1
+  flutter_app_badger: ^1.5.0
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_lints: ^2.0.1
