--- a/v_ui_packages/v_chat_room_page/room_example/pubspec.yaml
+++ b/v_ui_packages/v_chat_room_page/room_example/pubspec.yaml
@@ -8,8 +8,8 @@ environment:
 dependencies: 
   cupertino_icons: ^1.0.5
   get: 4.6.5
-  v_chat_utils: ^0.1.0+5
-  v_chat_sdk_core: ^0.1.0+6
+  v_chat_utils: ^0.4.0
+  v_chat_sdk_core: ^0.4.0
   flutter_localizations:
     sdk: flutter
   v_chat_room_page:
