--- a/core_packages/v_chat_utils/utils_example/android/app/build.gradle
+++ b/core_packages/v_chat_utils/utils_example/android/app/build.gradle
@@ -48,6 +48,7 @@ android {
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
         minSdkVersion 21
+        manifestPlaceholders = [API_KEY: "fghfhjhjg"]
         targetSdkVersion 33
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
