add message info pages

--- a/core_packages/v_chat_sdk_sample/android/app/src/main/AndroidManifest.xml
+++ b/core_packages/v_chat_sdk_sample/android/app/src/main/AndroidManifest.xml
@@ -58,6 +58,7 @@
     <application
         android:label="v_chat_sdk_sample"
         android:name="${applicationName}"
+        android:enableOnBackInvokedCallback="true"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
@@ -88,6 +89,9 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAP-dsgfdsgh"/>
     </application>
 
 </manifest>
