--- a/v_shared_packages/v_chat_input_ui/pubspec.yaml
+++ b/v_shared_packages/v_chat_input_ui/pubspec.yaml
@@ -15,8 +15,8 @@ dependencies:
 
   permission_handler: ^10.2.0
   stop_watch_timer: ^2.0.0
-  place_picker: ^0.10.0
-  #google_maps_place_picker_mb: ^3.0.0
+#  place_picker: ^0.10.0
+  google_maps_place_picker_mb: ^3.0.0
   latlong2: ^0.8.1
   cross_file: ^0.3.3+2
   path_provider: ^2.0.11
@@ -27,6 +27,7 @@ dependencies:
   audio_waveforms: ^1.0.1
   emoji_picker_flutter: ^1.5.2
   meta: ^1.8.0
+  google_maps_flutter: ^2.2.3
 
 dev_dependencies:
   flutter_test:
