--- a/push_providers/v_chat_firebase_fcm/pubspec.yaml
+++ b/push_providers/v_chat_firebase_fcm/pubspec.yaml
@@ -1,6 +1,6 @@
 name: v_chat_firebase_fcm
 description: v chat fcm implementations
-version: 0.5.0
+version: 0.5.0+1
 homepage: https://hatemragab.github.io/VChatSdk-Documentation/
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
 repository: https://github.com/hatemragab/v_chat_sdk/v_chat_firebase_fcm
