--- a/core_packages/v_chat_sdk_core/pubspec.yaml
+++ b/core_packages/v_chat_sdk_core/pubspec.yaml
@@ -12,10 +12,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  v_chat_utils: ^0.5.0
+  v_chat_utils: ^0.5.0+2
   http: ^0.13.5
   logging: ^1.1.1
-  chopper: ^6.0.0
+  chopper: ^6.1.0
   http_parser: ^4.0.2
   encrypt: ^5.0.1
   crypto: ^3.0.2
@@ -25,14 +25,11 @@ dependencies:
   sqflite: ^2.2.4+1
 #  stack_trace: ^1.11.0
   html: ^0.15.1
-  cross_file: ^0.3.3+2
   objectid: ^2.1.0
   sqlite3_flutter_libs: ^0.5.12
   diacritic: ^0.1.3
   #for testing only
   random_string: ^2.3.1
-  meta: ^1.8.0
-
   flutter_fgbg: ^0.2.2
   flutter_cache_manager: ^3.3.0
 dev_dependencies:
