--- a/core_packages/v_chat_utils/pubspec.yaml
+++ b/core_packages/v_chat_utils/pubspec.yaml
@@ -1,6 +1,6 @@
 name: v_chat_utils
 description: utils for v chat sdk
-version: 0.5.0
+version: 0.5.0+2
 homepage: https://hatemragab.github.io/VChatSdk-Documentation/
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
 repository: https://github.com/hatemragab/v_chat_sdk/tree/v2/core_packages/v_chat_utils
@@ -51,6 +51,7 @@ dependencies:
   flutter_native_image: ^0.0.6+1
   video_thumbnail: ^0.5.3
   flutter_advanced_avatar: ^1.1.0
+  multi_value_listenable_builder: ^0.0.2
   flutter_localizations:
     sdk: flutter
   meta: ^1.8.0
