--- a/core_packages/v_chat_sdk_core/pubspec.yaml
+++ b/core_packages/v_chat_sdk_core/pubspec.yaml
@@ -1,9 +1,9 @@
 name: v_chat_sdk_core
 description: core package for v chat sdk witch use socket.io with node js and mongodb db
-version: 0.5.0+2
+version: 0.6.0
 homepage: https://hatemragab.github.io/VChatSdk-Documentation/
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
-repository: https://github.com/hatemragab/v_chat_sdk/tree/v2/core_packages/v_chat_sdk_core
+repository: https://github.com/hatemragab/v_chat_sdk/tree/master/core_packages/v_chat_sdk_core
 
 environment:
   sdk: '>=2.17.0 <3.0.0'
@@ -12,7 +12,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  v_chat_utils: ^0.5.0+2
+  v_chat_utils: ^0.6.0
   http: ^0.13.5
   logging: ^1.1.1
   chopper: ^6.1.0
