--- a/core_packages/v_chat_utils/pubspec.yaml
+++ b/core_packages/v_chat_utils/pubspec.yaml
@@ -1,9 +1,9 @@
 name: v_chat_utils
 description: utils for v chat sdk
-version: 0.5.0+2
+version: 0.6.0
 homepage: https://hatemragab.github.io/VChatSdk-Documentation/
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
-repository: https://github.com/hatemragab/v_chat_sdk/tree/v2/core_packages/v_chat_utils
+repository: https://github.com/hatemragab/v_chat_sdk/tree/master/core_packages/v_chat_utils
 
 environment:
   sdk: '>=2.17.0 <3.0.0'
@@ -20,7 +20,7 @@ dependencies:
   textless: ^6.6.6
   file_picker: ^5.2.5
   image: ^3.0.2
-  url_launcher: ^6.1.8
+  url_launcher: ^6.1.9
   image_cropper: ^3.0.1
   wechat_camera_picker: ^3.7.0
   encrypt: ^5.0.1
@@ -28,7 +28,6 @@ dependencies:
   latlong2: ^0.8.1
   file_sizes: ^1.0.6
   path: ^1.8.2
-  cross_file: ^0.3.3+2
   mime: ^1.0.4
   http: ^0.13.5
   collection: ^1.16.0
@@ -47,14 +46,13 @@ dependencies:
   uuid: ^3.0.7
   path_provider: ^2.0.11
   intl: ^0.17.0
-  map_launcher: ^2.4.0
+  map_launcher: ^2.5.0+1
   flutter_native_image: ^0.0.6+1
   video_thumbnail: ^0.5.3
   flutter_advanced_avatar: ^1.1.0
-  multi_value_listenable_builder: ^0.0.2
+  meta: ^1.8.0
   flutter_localizations:
     sdk: flutter
-  meta: ^1.8.0
 dev_dependencies:
   flutter_lints: ^2.0.1
   lints: ^2.0.1
