--- a/push_providers/v_chat_firebase_fcm/pubspec.yaml
+++ b/push_providers/v_chat_firebase_fcm/pubspec.yaml
@@ -1,9 +1,9 @@
 name: v_chat_firebase_fcm
 description: v chat fcm implementations
-version: 0.5.0+1
+version: 0.6.0
 homepage: https://hatemragab.github.io/VChatSdk-Documentation/
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
-repository: https://github.com/hatemragab/v_chat_sdk/v_chat_firebase_fcm
+repository: https://github.com/hatemragab/v_chat_sdk/tree/master/push_providers/v_chat_one_signal
 
 environment:
   sdk: '>=2.17.0 <3.0.0'
@@ -12,8 +12,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  v_chat_utils: ^0.5.0
-  v_chat_sdk_core: ^0.5.0
+  v_chat_utils: ^0.6.0
+  v_chat_sdk_core: ^0.6.0
   firebase_core: ^2.4.1
   firebase_messaging: ^14.2.1
   eraser: ^2.0.1
