--- a/v_shared_packages/v_chat_receive_share/pubspec.yaml
+++ b/v_shared_packages/v_chat_receive_share/pubspec.yaml
@@ -1,9 +1,9 @@
 name: v_chat_receive_share
 description: v chat receive share will make your app support share from other apps
-version: 0.2.0
+version: 0.6.0
 homepage: https://hatemragab.github.io/VChatSdk-Documentation/
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
-repository: https://github.com/hatemragab/v_chat_sdk
+repository: https://github.com/hatemragab/v_chat_sdk/tree/master/v_shared_packages/v_chat_receive_share
 
 environment:
   sdk: '>=2.17.0 <3.0.0'
@@ -12,11 +12,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  v_chat_utils: ^0.5.0+2
-  v_chat_sdk_core: ^0.5.0+2
-  v_chat_media_editor: ^0.5.0
-  v_chat_room_page: ^0.5.0
+  v_chat_utils: ^0.6.0
+  v_chat_sdk_core: ^0.6.0
   share_handler: ^0.0.16
+  v_chat_media_editor: ^0.6.0
 
 
 dev_dependencies:
