--- a/v_ui_packages/v_chat_message_page/pubspec.yaml
+++ b/v_ui_packages/v_chat_message_page/pubspec.yaml
@@ -1,9 +1,9 @@
 name: v_chat_message_page
 description: v chat sdk message page ui
-version: 0.5.0
+version: 0.6.0
 homepage: https://hatemragab.github.io/VChatSdk-Documentation/
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
-repository: https://github.com/hatemragab/v_chat_sdk
+repository: https://github.com/hatemragab/v_chat_sdk/tree/master/v_ui_packages/v_chat_message_page
 
 environment:
   sdk: '>=2.17.0 <3.0.0'
@@ -12,17 +12,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  v_chat_utils: ^0.5.0
-  v_chat_sdk_core: ^0.5.0
-  v_chat_voice_player: ^0.5.0
-  v_chat_input_ui: ^0.5.0
-  v_chat_media_editor: ^0.5.0
-  map_launcher: ^2.4.0
+  v_chat_utils: ^0.6.0
+  v_chat_sdk_core: ^0.6.0
+  v_chat_voice_player: ^0.6.0
+  v_chat_input_ui: ^0.6.0
+  v_chat_media_editor: ^0.6.0
+  map_launcher: ^2.5.0+1
   swipe_to: ^1.0.2
-  share_plus: ^6.3.0
+  share_plus: ^6.3.1
   scroll_to_index: ^3.0.1
   flutter_parsed_text: ^2.2.1
-  open_file_plus: ^3.3.0
+  open_file_plus: ^3.4.0
   flutter_cache_manager: ^3.3.0
   meta: ^1.8.0
 
