--- a/v_ui_packages/v_chat_web_rtc/pubspec.yaml
+++ b/v_ui_packages/v_chat_web_rtc/pubspec.yaml
@@ -1,6 +1,6 @@
 name: v_chat_web_rtc
 description: v chat web rtc call implementations
-version: 0.5.0+5
+version: 0.6.0
 homepage: https://hatemragab.github.io/VChatSdk-Documentation/
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
 repository: https://github.com/hatemragab/v_chat_sdk/tree/v2/v_ui_packages/v_chat_web_rtc
@@ -13,13 +13,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  v_chat_sdk_core: ^0.6.0
+  v_chat_utils: ^0.6.0
   flutter_webrtc: ^0.9.22
   pip_view: ^0.9.7
   retry: ^3.1.0
   sdp_transform: ^0.3.2
   stop_watch_timer: ^2.0.0
-  v_chat_sdk_core: ^0.5.0+2
-  v_chat_utils: ^0.5.0
+
 
 dev_dependencies:
   flutter_test:
