--- a/core_packages/v_chat_utils/pubspec.yaml
+++ b/core_packages/v_chat_utils/pubspec.yaml
@@ -1,7 +1,7 @@
 name: v_chat_utils
 description: utils for v chat sdk
-version: 0.8.0
-homepage: https://hatemragab.github.io/VChatSdk-Documentation/
+version: 1.0.0
+homepage: https://v-chat-sdk.github.io/vchat-v2-docs/docs/intro
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
 repository: https://github.com/hatemragab/v_chat_sdk/tree/master/core_packages/v_chat_utils
 
@@ -48,7 +48,7 @@ dependencies:
   flutter_native_image: ^0.0.6+1
   video_thumbnail: ^0.5.3
   flutter_advanced_avatar: ^1.5.0
-  v_chat_sdk_core: ^0.8.0+1
+  v_chat_sdk_core: ^1.0.0
   v_platform: ^1.0.3
   meta: ^1.9.1
 #  universal_html: ^2.2.2
