--- a/push_providers/v_chat_firebase_fcm/pubspec.yaml
+++ b/push_providers/v_chat_firebase_fcm/pubspec.yaml
@@ -1,7 +1,7 @@
 name: v_chat_firebase_fcm
-description: v chat fcm implementations
-version: 0.8.0
-homepage: https://hatemragab.github.io/VChatSdk-Documentation/
+description: v chat firebase notifiactions push implementations
+version: 1.0.0
+homepage: https://v-chat-sdk.github.io/vchat-v2-docs/docs/intro
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
 repository: https://github.com/hatemragab/v_chat_sdk/tree/master/push_providers/v_chat_one_signal
 
@@ -12,9 +12,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  v_chat_sdk_core: ^0.8.0
-  firebase_core: ^2.8.0
-  firebase_messaging: ^14.3.0
+  v_chat_sdk_core: ^1.0.0
+  firebase_core: ^2.13.1
+  firebase_messaging: ^14.6.2
   eraser: ^2.0.1
   flutter_app_badger: ^1.5.0
   http: ^0.13.5
@@ -24,7 +24,7 @@ dev_dependencies:
   flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
-  lints: ^2.0.1
+  lints: ^2.1.0
 
 flutter:
 
