--- a/push_providers/v_chat_one_signal/pubspec.yaml
+++ b/push_providers/v_chat_one_signal/pubspec.yaml
@@ -1,7 +1,7 @@
 name: v_chat_one_signal
 description: v chat one signal push notifications implementations
-version: 0.8.0
-homepage: https://hatemragab.github.io/VChatSdk-Documentation/
+version: 1.0.0
+homepage: https://v-chat-sdk.github.io/vchat-v2-docs/docs/intro
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
 repository: https://github.com/hatemragab/v_chat_sdk
 
@@ -12,7 +12,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  v_chat_sdk_core: ^0.8.0+1
+  v_chat_sdk_core: ^1.0.0
   onesignal_flutter: ^3.5.1
   eraser: ^2.0.1
   flutter_app_badger: ^1.5.0
