--- a/v_shared_packages/v_chat_input_ui/pubspec.yaml
+++ b/v_shared_packages/v_chat_input_ui/pubspec.yaml
@@ -1,7 +1,7 @@
 name: v_chat_input_ui
-description: v chat text input ui
-version: 0.8.0
-homepage: https://hatemragab.github.io/VChatSdk-Documentation/
+description: v chat text input ui and recorder this item is part of v_chat_sdk and it can be used as a standalone package
+version: 1.0.0
+homepage: https://v-chat-sdk.github.io/vchat-v2-docs/docs/intro
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
 repository: https://github.com/hatemragab/v_chat_sdk/tree/master/v_shared_packages/v_chat_input_ui
 
@@ -15,7 +15,7 @@ dependencies:
   permission_handler: ^10.2.0
   stop_watch_timer: ^2.0.0
   place_picker: ^0.10.0
-#  google_maps_place_picker_mb: ^3.0.1
+  #  google_maps_place_picker_mb: ^3.0.1
   latlong2: ^0.9.0
   cross_file: ^0.3.3+4
   record: ^4.4.4
@@ -23,6 +23,7 @@ dependencies:
   audio_waveforms: ^1.0.4
   emoji_picker_flutter: ^1.6.0
   meta: ^1.9.1
+  intl: 0.18.0
   google_maps_flutter: ^2.2.8
   v_platform: ^1.0.3
   cached_network_image: ^3.2.3
@@ -33,6 +34,7 @@ dependencies:
   image_cropper: ^4.0.1
   wechat_camera_picker: ^3.8.0
   uuid: ^3.0.7
+  path_provider: ^2.0.15
 dev_dependencies:
   flutter_test:
     sdk: flutter
