--- a/v_shared_packages/v_chat_media_editor/pubspec.yaml
+++ b/v_shared_packages/v_chat_media_editor/pubspec.yaml
@@ -1,7 +1,7 @@
 name: v_chat_media_editor
-description: v chat media editor package
-version: 0.8.0
-homepage: https://hatemragab.github.io/VChatSdk-Documentation/
+description: v chat media editor package from v chat sdk this package is used to edit images and videos
+version: 1.0.0
+homepage: https://v-chat-sdk.github.io/vchat-v2-docs/docs/intro
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
 repository: https://github.com/hatemragab/v_chat_sdk/tree/master/v_shared_packages/v_chat_media_editor
 
