--- a/v_shared_packages/v_chat_voice_player/pubspec.yaml
+++ b/v_shared_packages/v_chat_voice_player/pubspec.yaml
@@ -1,7 +1,7 @@
 name: v_chat_voice_player
-description: v chat voice player
-version: 0.8.0
-homepage: https://hatemragab.github.io/VChatSdk-Documentation/
+description: v chat voice player package this item is part of v_chat_sdk and it can be used as a standalone package
+version: 1.0.0
+homepage: https://v-chat-sdk.github.io/vchat-v2-docs/docs/intro
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
 repository: https://github.com/hatemragab/v_chat_sdk/tree/master/v_shared_packages/v_chat_voice_player
 
