--- a/v_ui_packages/v_chat_room_page/pubspec.yaml
+++ b/v_ui_packages/v_chat_room_page/pubspec.yaml
@@ -1,7 +1,7 @@
 name: v_chat_room_page
-description: v chat rooms page ui.
-version: 0.8.0
-homepage: https://hatemragab.github.io/VChatSdk-Documentation/
+description: v chat rooms page ui package this package is part of v chat sdk and cant be used alone.
+version: 1.0.0
+homepage: https://v-chat-sdk.github.io/vchat-v2-docs/docs/intro
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
 repository: https://github.com/hatemragab/v_chat_sdk/tree/master/v_ui_packages/v_chat_web_rtc
 
@@ -12,7 +12,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  v_chat_sdk_core: ^0.8.0+1
+  v_chat_sdk_core: ^1.0.0
   cached_network_image: ^3.2.3
   flutter_advanced_avatar: ^1.5.0
   map_launcher: ^2.5.0+1
