--- a/v_ui_packages/v_chat_message_page/pubspec.yaml
+++ b/v_ui_packages/v_chat_message_page/pubspec.yaml
@@ -1,6 +1,6 @@
 name: v_chat_message_page
 description: v chat sdk message page ui package this package is part of v chat sdk and cant be used alone
-version: 2.0.0+1
+version: 2.1.0
 homepage: https://v-chat-sdk.github.io/vchat-v2-docs/docs/intro
 issue_tracker: https://github.com/hatemragab/v_chat_sdk/issues
 repository: https://github.com/hatemragab/v_chat_sdk/tree/master/v_ui_packages/v_chat_message_page
@@ -12,7 +12,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  v_chat_sdk_core: ^2.0.0
+  v_chat_sdk_core: ^2.1.0
   v_chat_input_ui: ^2.0.0+4
   v_chat_voice_player: ^2.0.0+1
   v_chat_media_editor: ^2.0.0
@@ -39,12 +39,16 @@ dependencies:
   phosphor_flutter: ^1.4.0
   http: ^1.2.1
   uuid: ^4.4.0
+  permission_handler: ^11.3.1
   path_provider: ^2.1.3
+  stop_watch_timer: ^3.1.1
   photo_view: ^0.15.0
   chewie: ^1.8.1
   video_player: ^2.8.6
   shared_preferences: ^2.2.3
   agora_rtc_engine: ^5.3.1
+  flutter_ringtone_player: ^4.0.0+3
+  wakelock_plus: ^1.2.5
 dev_dependencies:
   flutter_lints: ^4.0.0
   lints: ^4.0.0
